# garagem

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0002_veiculo_capa.py  0003_acessório.py  0003_alter_categoria_options_alter_marca_options_and_more.py  0004_acessorio_cor_veiculo_delete_acessório.py  0005_alter_acessorio_options_alter_veiculo_categoria_and_more.py  0006_alter_cor_options.py  0007_alter_cor_options.py
garagem/models/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: cor.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
