[tool.pdm]

[project]
name = "garagem"
version = "0.1.0"
description = ""
authors = [
    {name = "heloisa", email = ""},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
